solving the bug of the overflow on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -64,6 +64,7 @@ a:visited {
   border-radius: 5px;
   position: relative;
   overflow: hidden;
+  z-index: 1;
 }
 
 .button span {
@@ -74,14 +75,11 @@ a:visited {
 .button::before {
   content: '';
   width: 0px;
-  height: 0px;
   background-color: #D1EE1E;
   position: absolute;
-  border-radius: 50% ;
-  bottom: 0px;
   left: 0;
-  right: 0;
-  transition: width .5s ease-in, height .5s ease-in;
+  top: 0;
+  transition: width .2s ease-in, height .2s ease-in;
 }
 
 .button:hover::before {
@@ -116,6 +114,7 @@ a:visited {
     opacity: 0.1;
     background-color: var(--clr-primary);
     transition: all .8s ease-in;
+    z-index: 9999;
     
   }
 
@@ -227,14 +226,14 @@ a:visited {
 }
 
 .green-back {
-  width: 331px;
-  height: 490px;
+  width: 200px;
+  height: 460px;
 
   background-color: var(--clr-primary);
   display: block;
   position: absolute;
   top: 0;
-  left: 40px;
+  left: 20%;
   z-index: -1;
 }
 
